@@ -21,9 +21,11 @@ ver 0.20 (not yet released)
   - ffmpeg: support ReplayGain and MixRamp
   - ffmpeg: support stream tags
   - gme: add option "accuracy"
+  - gme: faster scanning
   - mad: reduce memory usage while scanning tags
   - mpcdec: read the bit rate
   - pcm: support audio/L16 (RFC 2586) and audio/x-mpd-float
+  - sidplay: faster scanning
 * playlist
   - cue: don't skip pregap
   - embcue: fix last track
